docs/pem/7.12/pem_agent/02_installing_pem_agent.mdx
---
title: "Installing a PEM Agent"
---

<div id="installing_pem_agent" class="registered_link"></div>


You can use a graphical installer to install the Postgres Enterprise Manager agent on a Windows host. This graphical installer can also be invoked from command line.

To install the Postgres Enterprise Manager agent on a Linux host, you must use an RPM package.

Installers are available from the EnterpriseDB website at:

> <http://www.enterprisedb.com/download-postgres-enterprise-manager>

## Installing an Agent on a Windows Host



On a Windows system,you can invoke the installer by right-clicking on the downloaded installer's icon, and selecting `Run as Administrator`. The `PEM Agent Setup Wizard` opens, welcoming you.

<figure><img src="images/pem_upgrade_agent_welcome.png" class="align-center" alt="The PEM Agent installer welcome window" /><figcaption aria-hidden="true"><em>The PEM Agent installer welcome window</em></figcaption></figure>

Click `Next` to continue to the `License Agreement`.

<figure><img src="images/pem_upgrade_agent_license.png" class="align-center" alt="The PEM license agreement" /><figcaption aria-hidden="true"><em>The PEM license agreement</em></figcaption></figure>

Carefully review the license agreement before highlighting the appropriate radio button and accepting the agreement; click `Next` to continue to the `Installation Directory` dialog.

<figure><img src="images/pem_specify_installation_directory.png" class="align-center" alt="Specify an Installation Directory" /><figcaption aria-hidden="true"><em>Specify an Installation Directory</em></figcaption></figure>

By default, the PEM agent is installed in the `/home/opt/PEM` directory. You can accept the default installation directory, or modify the contents of the Installation Directory field, specifying an alternate installation directory for the PEM agent.

By default, the PEM agent installer places a certificate in the Administrator’s `%APPDATA%\pem` directory. Check the `Show advanced options` box to indicate that you would like the PEM agent installer to include a dialog that allows you to specify an alternate path for the certificate file.

Check the box next to `Register now?` to instruct the installer to register the newly installed PEM agent with the PEM server. Click `Next` to continue to the `PEM Server Installation Details` dialog.

<figure><img src="images/pem_server_installation_details.png" class="align-center" alt="Provide PEM server installation details" /><figcaption aria-hidden="true"><em>Provide PEM server installation details</em></figcaption></figure>

Enter the connection details for the PEM server on the PEM server installation details dialog:

-   Specify the name or IP address of the system on which the PEM database server resides in the `Host` field. Please note: If the `PEM-HTTPD` web server and PEM database are hosted on different systems, you must specify the host of the PEM database.
-   Specify the name of the database superuser in the `User Name` field.
-   Specify the password associated with the database superuser in the `Password` field.
-   Specify the port that PostgreSQL is monitoring in the `Port` field.

Click `Next` to continue. The installer will attempt to connect to the server to verify that the details are correct.

<div class="note">

<div class="title">

Note

</div>

The PEM server must allow connections from the PEM agent installer. If you encounter a connection error, confirm the connection properties specified on the PEM Server Installation Details dialog are correct, and confirm that the `pg_hba.conf` file (on the PEM server) will allow a connection to the server described in the error message.

</div>

<figure><img src="images/pem_agent_installation_details.png" class="align-center" alt="Specify a descriptive name for the PEM agent" /><figcaption aria-hidden="true"><em>Specify a descriptive name for the PEM agent</em></figcaption></figure>

The tree control displayed in the Browser panel of the PEM web interface displays the value entered in the `Description` field to identify the PEM agent. Specify a descriptive name for the agent, such as the hostname of the machine the agent is installed on, or a name that reflects the host's functionality. Provide a descriptive name, or accept the default provided by the PEM agent host, and click `Next` to continue.

If you checked the `Show advanced options` checkbox, the `Advanced options` dialog opens:

<figure><img src="images/pem_agent_installer_cert_path.png" class="align-center" alt="Provide the certificate path" /><figcaption aria-hidden="true"><em>Provide the certificate path</em></figcaption></figure>

By default, the PEM agent installer places the certificate in the `/root/.pem` directory. Specify an alternate path for the certificate or accept the default and click `Next`. The wizard is now ready to install the PEM agent; click `Back` to amend the installation directory, or `Next` to continue.

<figure><img src="images/pem_agent_installation_ready_to_begin.png" class="align-center" alt="The PEM Agent installation is ready to begin" /><figcaption aria-hidden="true"><em>The PEM Agent installation is ready to begin</em></figcaption></figure>

Click `Next` on the `Ready to Install` dialog to instruct the installer to copy files to the system and register the agent on the PEM server.

<figure><img src="images/pem_agent_installation_in_progress.png" class="align-center" alt="Progress bars mark the installation&#39;s progress" /><figcaption aria-hidden="true"><em>Progress bars mark the installation's progress</em></figcaption></figure>

The PEM agent installer displays progress bars to mark the PEM agent's installation progress.

<figure><img src="images/pem_agent_installation_completed.png" class="align-center" alt="The PEM Agent installation is complete" /><figcaption aria-hidden="true"><em>The PEM Agent installation is complete</em></figcaption></figure>

When the installation has completed, the PEM agent will be running and reporting operating system and host data to the PEM server. To start monitoring Postgres instances on the host of the PEM agent, they must now be added to PEM’s enterprise directory and bound to the agent.

## Invoking a Graphical Installer from the Command Line



The command line options of PEM agent graphical installer offers functionality in situations where a graphical installation may not work because of limited resources or system configuration. You can:

-   Include the `--mode unattended` option when invoking the installer to perform an installation without additional user input.
-   Include the `--mode text` option when invoking the installer to perform an installation from the command line with an interactive installer.

For a complete reference guide to the command line options, include the --help option when you invoke the installer.

### Invoking a Graphical Installer in Text Mode



You can invoke the PEM agent installer at the command line to perform an interactive installation if your system does not support a full graphical installation. Please note that the system on which you are installing the agent must have access to the PEM server.

You must have Administrative privileges to install the PEM server. You can invoke the PEM server installer with the following command:

    pem-server-7.x.x-windows-x64.exe --mode text

Example:

When you invoke the PEM agent installer, the installer welcomes you:

    --------------------------------------------------------------------
    Welcome to the Postgres Enterprise Manager (PEM) Agent Setup Wizard.
    --------------------------------------------------------------------

Before installing the PEM server, you must review and accept the terms of the PEM license agreement:

    Please read the following License Agreement. You must accept the
    terms of this agreement before continuing with the installation.

    Press [Enter] to continue:
    Do you accept this license? [y/n]:
    -----------------------------------------------------------------

Next, you will be prompted for an installation directory; you can use the default installation directory, or specify an alternate location. By default, the PEM agent installer places a certificate in the Administrator’s `%APPDATA%\pem` directory. Enter a `Y` after `Show advanced options` to access menu options that allow you to specify an alternate path for the certificate file.

    Installation Directory
    Please select a directory for PEM agent installation.
    Installation Directory [/opt/edb/pem]:
    Show advanced options [y/N]:
    -----------------------------------------------------------------

When prompted, provide information about the PEM server installation:

    PEM server installation details
    Please verify the PEM server installation details
    Host [localhost]:
    User Name [postgres]:
    Password :
    Port [5432]:
    -----------------------------------------------------------------

You can provide a descriptive name for the agent, or press `Return` to accept the default:

    Agent Details
    Please provide the agent description
    Description [localhost]:
    -----------------------------------------------------------------

    The installer will prompt you before it proceeds with the installation; press Return to start the installation:
    Setup is now ready to begin installing the PEM agent on your
    computer.
    Do you want to continue? [Y/n]:
    -----------------------------------------------------------------

Please wait while Setup installs the PEM agent on your computer.

    Installing
    0% ______________ 50% ______________ 100%
    #########################################

The installer will notify you when the installation is complete:

    EnterpriseDB is the leading provider of value-added products and services for the Postgres community.
    Please visit our website at www.enterprisedb.com.

### Invoking a Graphical Installer in Unattended Mode



You can perform an unattended PEM agent installation by providing installation preferences on the command line when invoking the installer. Please note that the system on which you are installing the PEM server must have internet access.

Before invoking the PEM agent installer in unattended mode, you must:

-   install the PEM server; the `pg_hba.conf` file of the PEM server must allow connections from the host of the PEM agent.
-   ensure that the monitored Postgres database has SSL enabled, and is accepting connections.

You must have Administrator privileges to install the PEM agent. Use the following command to invoke the PEM agent installer in unattended mode:

    pem-agent-7<.x.x>-windows-x64.exe --mode unattended
    --pghost <pem_server_host_address> --pgport <pem_server_port>
    --pguser postgres --pgpassword <pguser_password>
    --agent_description <agent_name>

Where: *x.x* specifies the version of PEM agent. *pem\_server\_host\_address* specifies the IP address of the host of the PEM server. *pem\_server\_port* specifies the port used by the backing PEM database; by default, the database uses port 5432 . *pguser\_password* specifies the password associated with the PEM database superuser. *agent\_name* specifies a descriptive name for the PEM agent.

## Installing an Agent on a RHEL or CentOS host





On a Linux system, you can use the `yum` package manager to install a PEM agent. Please note that before using a package manager to install the PEM agent on a host, you must:

-   Install the `epel-release` package on the host:

    `yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm`

> <div class="note">
>
> <div class="title">
>
> Note
>
> </div>
>
> You may need to enable the `[extras]` repository definition in the `CentOS-Base.repo` file (located in `/etc/yum.repos.d`).
>
> </div>

-   You must also have credentials that allow access to the EnterpriseDB repository. For information about requesting credentials, visit:

    > <https://info.enterprisedb.com/rs/069-ALB-339/images/Repository%20Access%2004-09-2019.pdf>

After receiving your repository credentials you can:

1.  Create the repository configuration file.
2.  Modify the file, providing your user name and password.
3.  Install `edb-pem-agent`.

**Creating a Repository Configuration File**

To create the repository configuration file, assume superuser privileges, and invoke the following command:

> `yum -y install https://yum.enterprisedb.com/edb-repo-rpms/edb-repo-latest.noarch.rpm`

The repository configuration file is named `edb.repo`. The file resides in `/etc/yum.repos.d`.

**Modifying the file, providing your user name and password**

After creating the `edb.repo` file, use your choice of editor to ensure that the value of the enabled parameter is `1`, and replace the `username` and `password` placeholders in the `baseurl` specification with the name and password of a registered EnterpriseDB user.

    [edb]
    name=EnterpriseDB RPMs $releasever - $basearch
    baseurl=https://<username>:<password>@yum.enterprisedb.com/edb/redhat/rhel-$releasever-$basearch
    enabled=1
    gpgcheck=1
    gpgkey=file:///etc/pki/rpm-gpg/ENTERPRISEDB-GPG-KEY

**Installing PEM Agent**

After saving your changes to the configuration file, you can use the yum install command to install `edb-pem-agent`. For example, the following command installs `edb-pem-agent`:

> `yum install edb-pem-agent`

When the installation is complete, `yum` will display a list of the installed packages and dependencies.

<figure><img src="images/pem_rpm_installation_agent.png" class="align-center" alt="Using an RPM package to install the PEM agent" /><figcaption aria-hidden="true"><em>Using an RPM package to install the PEM agent</em></figcaption></figure>

When you install an RPM package that is signed by a source that is not recognized by your system, yum may ask for your permission to import the key to your local server. If prompted, and you are satisfied that the packages come from a trustworthy source, enter `y`, and press `Return` to continue.

During the installation, yum may encounter a dependency that it cannot resolve. If it does, it will provide a list of the required dependencies that you must manually resolve.

## Installing an Agent on a SLES Host



For detailed information about installing Advanced Server and supporting components on a SLES host, please consult the EDB Postgres Advanced Server Installation Guide, available at:

> <https://www.enterprisedb.com/resources/product-documentation>

SLES packages are available from:

> <https://zypp.enterprisedb.com>

Before installing a PEM agent, you must install prerequisite packages.

Use the following commands in the given sequence to install the agent:

    SUSEConnect -p sle-module-legacy/12/x86_64

    SUSEConnect -p sle-sdk/12/x86_64

    zypper addrepo https://download.opensuse.org/repositories/Apache:Modules/<SLE_version_service_pack>/Apache:Modules.repo

    zypper addrepo http://download.opensuse.org/repositories/Cloud:/OpenStack:/Newton:/cisco-apic:/2.3.1/<SLE_version_service_pack>/ pem_opensuse_boost

    zypper refresh

    zypper install edb-pem-agent

Where *SLE\_version\_service\_pack* is the version and service pack of the SLES that you are using, such as SLE\_12\_SP2 or SLE\_12\_SP3.

## Installing an Agent on a Debian or Ubuntu Host





To install PEM agent on a Debian or Ubuntu host, you must have credentials that allow access to the EnterpriseDB repository. To request credentials for the repository, contact [EnterpriseDB](https://www.enterprisedb.com/repository-access-request) .

The following steps will walk you through using the EnterpriseDB apt repository to install a Debian package. When using the commands, replace the *username* and *password* with the credentials provided by EnterpriseDB.

1.  Go to <https://apt.enterprisedb.com/> and log in as `root`:

    `sudo su –`

2.  Configure the EnterpriseDB repository:

    `sh -c 'echo "deb https://<username>:<password>@apt.enterprisedb.com/$(lsb_release - cs)-edb/ $(lsb_release -cs) main" > /etc/apt/sources.list.d/edb- $(lsb_release -cs).list'`

3.  Add support to your system for secure APT repositories:

    `apt-get install apt-transport-https`

4.  Add the EBD signing key:

    `wget -q -O -https://<username>:<password>@apt.enterprisedb.com/edb-deb.gpg.key | apt-key add –`

5 . Update the repository metadata:

> `apt-get update`

1.  Use the following command to install the Debian package for PEM agent:

    `apt-get install edb-pem-agent`
